Módulo 24: Aplicativo - Convidados - MVVM e Banco de Dados
aula 126

--- a/app/src/main/res/layout/activity_guest_form.xml
+++ b/app/src/main/res/layout/activity_guest_form.xml
@@ -29,6 +29,7 @@
 
         <RadioButton
             android:id="@+id/radio_not_confirmed"
+            android:checked="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Não Confirmado"/>
@@ -47,7 +48,7 @@
     </RadioGroup>
 
     <Button
-        android:id="@+id/button_salvar"
+        android:id="@+id/button_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Salvar"
